--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/icon_shandi"
+        android:label="샨디의 메모장"
+        android:roundIcon="@mipmap/icon_shandi_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Shandi_Memo">
         <activity
